Initial routing setup

--- a/client/index.html
+++ b/client/index.html
@@ -20,251 +20,8 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="scrollable-body">
-      <header ng-controller="HeaderController as headerCtrl">
-        <div class="container-fluid">
-          <div class="row header">
-            <div class="logo col-md-6 pull-left">
-              <img src="images/logo.png" alt="" />
-            </div>
-            <img class="corner" src="images/corner.png" alt="" ng-click="headerCtrl.resetForm()" />
-            <div id="account" class="col-md-6" style="display: none;">
-              <div class="pull-right">
-                <select name="customerRep" id="customerRep" class="form-control">
-                  <option value="Ivan Turkovic">Ivan Turkovic</option>
-                  <option value="Leran Firer">Leran Firer</option>
-                </select>
-              </div>
-              <img class="avatar pull-right" src="" alt="" />
-            </div>
-          </div>
-        </div>
-      </header>
-
-      <div class="container-fluid body-content">
-        <div class="full-height" id="full-height">
-          <div class="row">
-            <div class="col-md-8 col-sm-12 col-xs-12 title-description">
-              <span>{{::appCtrl.mainHeader}}</span>
-              <br/>
-              {{::appCtrl.mainSubheader}}
-            </div>
-          </div>
-          <div class="row main">
-            <section class="customer col-md-4 col-sm-4" ng-controller="PersonalFormController as formCtrl">
-              <form id="personal"
-                    name="personalInformation"
-                    form-init="formCtrl.updateForm();">
-                <div class="step">
-                  <h1>
-                    Enter Customer Info
-                    <span class="right pull-right">Step 1</span>
-                  </h1>
-
-                  <div class="form-group"
-                       ng-repeat="field in formCtrl.formFields"
-                       ng-switch="field.type">
-                    <div ng-switch-when="input">
-                      <input class="form-control"
-                             type="text"
-                             ng-model="formCtrl[field.name]"
-                             ng-blur="formCtrl.updateForm()"
-                             name="{{field.name}}"
-                             placeholder="{{field.placeholder}}"
-                             ng-required="field.required"
-                             ng-model-options="{ updateOn: 'blur' }">
-                      <div class="help-block" ng-messages="personalInformation[field.name].$error"
-                           ng-show="personalInformation[field.name].$touched || personalInformation.$submitted">
-                        <div ng-messages-include="messages.html"></div>
-                      </div>
-                    </div>
-                    <div ng-switch-when="tel">
-                      <input class="form-control"
-                       type="tel"
-                       ng-model="formCtrl[field.name]"
-                       ng-blur="formCtrl.updateForm()"
-                       name="{{field.name}}"
-                       placeholder="{{field.placeholder}}"
-                       ng-required="field.required"
-                       ng-model-options="{ updateOn: 'blur' }"
-                       phone-input>
-                      <div class="help-block"
-                           ng-messages="personalInformation[field.name].$error"
-                           ng-show="personalInformation[field.name].$touched || personalInformation.$submitted">
-                        <div ng-messages-include="messages.html"></div>
-                      </div>
-                    </div>
-                    <div ng-switch-when="email">
-                      <input class="form-control"
-                      type="email"
-                      ng-model="formCtrl[field.name]"
-                      ng-blur="formCtrl.updateForm()"
-                      ng-required="field.required"
-                      name="{{field.name}}"
-                      placeholder="{{field.placeholder}}"
-                      ng-model-options="{ updateOn: 'blur' }">
-                      <div class="help-block"
-                           ng-messages="personalInformation[field.name].$error"
-                           ng-show="personalInformation[field.name].$touched || personalInformation.$submitted">
-                        <div ng-messages-include="messages.html"></div>
-                      </div>
-                    </div>
-                    <div ng-switch-when="textArea">
-                      <textarea class="form-control"
-                                name="{{field.name}}"
-                                id="notes"
-                                ng-required="field.required"
-                                ng-model="formCtrl[field.name]"
-                                ng-blur="formCtrl.updateForm()"
-                                placeholder="{{field.placeholder}}">
-                      </textarea>
-                      <div class="help-block"
-                           ng-messages="personalInformation[field.name].$error"
-                           ng-show="personalInformation[field.name].$touched || personalInformation.$submitted">
-                        <div ng-messages-include="messages.html"></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </section>
-
-            <section class="topics col-md-8 col-sm-8" ng-controller="CollectionController as collection">
-              <div class="step">
-                <h1>
-                    Select Areas of Interest
-                  <span class="right pull-right">Step 2</span>
-                </h1>
-                <ul id="topics" class="row">
-                  <li class="col-md-4 col-sm-6 col-xs-12"
-                      ng-repeat="topic in collection.topics"
-                      ng-class="collection.isActiveClass(topic)"
-                      ng-click="collection.toggleSelection(topic, $event)">
-                    <div class="topicContainter">
-                      <img ng-src="{{collection.getImageUrlForCard(topic)}}"
-                           sizes="(max-width: 767px) 10vw, 100vw"
-                           ng-srcset="{{collection.getImageUrlForCard(topic)}} 768w, {{collection.getImageUrlForCard(topic, true)}} 600w"
-                           alt=""s
-                           class="topicImage noselect" />
-                    </div>
-                    <div class="content row">
-                      <div class="right-content col-md-12 col-md-push-0 col-sm-12 col-sm-push-0 col-xs-4 col-xs-push-8">
-                        <img ng-src="{{collection.getIconUrlForCard(topic)}}"
-                             alt=""
-                             class="topicIcon noselect" />
-                      </div>
-                      <div class="left-content col-md-12 col-md-pull-0 col-sm-12 col-sm-pull-0 col-xs-8 col-xs-pull-4">
-                        <div class="title noselect">{{collection.getTitleForCard(topic)}}</div>
-                        <div class="description noselect">{{collection.getDescriptionForCard(topic)}}</div>
-                      </div>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </section>
-          </div>
-        </div>
-      </div>
-
-      <footer class="footer">
-        <div class="container">
-          <div class="footer row" ng-controller="SubmitController as submit">
-            <div class="col-md-12 text-xs-center text-sm-center text-md-right text-lg-right">
-              <button type="button" class="btn btn-primary flat-submit" ng-click="submit.shareWrapViaSMS()" name="sendSms">{{::appCtrl.sendButtonText}}</button>
-            </div>
-          </div>
-        </div>
-      </footer>
-
-      <div class="" ng-show="showLoadingMessage" id="loadingIndicator">
-        <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw"></i>
-        <br>
-        Processing...
-      </div>
-
-      <div id="thank-you"
-           ng-show="showThankYouScreen"
-           ng-controller="ThankYouController as thankYouCtrl"
-           ng-click="thankYouCtrl.close()">
-       <div class="container-fluid">
-          <div class="row middle">
-            <div class="col-md-12">
-              <div class="title">Thank you!</div>
-            </div>
-            <div class="col-md-12">
-              <div class="subtitle">
-                You’ll be receiving the information you requested
-                <br>
-                via text shortly.
-              </div>
-            </div>
-            <div class="col-md-12">
-              <button type="button"
-                      class="btn btn-primary flat-submit start-here"
-                      ng-click="thankYouCtrl.close()">Close</button>
-            </div>
-
-          </div>
-          <div class="bottom row">
-            <div class="col-md-12">
-              <img class="bottom-logo" src="images/logoWhite.png"></img>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div id="fullscreen-intro"
-           ng-show="showIntroScreen"
-           ng-controller="IntroController as introCtrl"
-           ng-click="introCtrl.startHere()">
-        <video autoplay
-               preload
-               autobuffer
-               loop="true"
-               ng-click="introCtrl.startHere()"
-               id="introVideoPlayer"
-               webkit-playsinline
-               ad-outlet="video">
-          <source src="//d2f6ml2s3ev2kf.cloudfront.net/88889839_h264.mp4" type="video/mp4">
-          <source src="//d2f6ml2s3ev2kf.cloudfront.net/88889839.webmsd.webm" type="video/webm">
-          <source src="//d2f6ml2s3ev2kf.cloudfront.net/88889839.oggtheora.ogv" type="video/ogg">
-        </video>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-12 center-block">
-              <img src="images/logoWhite.png" alt="">
-            </div>
-            <div class="col-md-12 center-block">
-              <button type="button"
-                      class="btn btn-primary flat-submit start-here"
-                      ng-click="introCtrl.startHere()">Start</button>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="scrollable-body" ng-view>
     </div>
-
-    <script type="text/ng-template" id="loadingTemplate.html">
-      <div class="modal-body loading-dialog" style="padding:0px">
-        <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw"></i>
-      </div>
-    </script>
-
-    <script type="text/ng-template" id="messages.html">
-      <p ng-message="required">Required</p>
-      <p ng-message="minlength">This field is too short</p>
-      <p ng-message="maxlength">This field is too long</p>
-      <p ng-message="required">This field is required</p>
-      <p ng-message="email">This needs to be a valid email</p>
-    </script>
-
-    <script type="text/ng-template" id="errorModalTemplate.html">
-      <div class="modal-body" style="padding:0px" ng-click="close()">
-        <div class="alert alert-{{data.mode}}" style="margin-bottom:0px">
-          {{data.boldTextTitle}} {{data.textAlert}}
-        </div>
-      </div>
-    </script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
@@ -272,6 +29,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <script src="scripts/app.js"></script>
+    <script src="/partials.min.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
         (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
